# MP-interests-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: api_server.py
app/client/: __init__.py  fetch.py
app/client/mock_responses/: mock_member_response.json
app/client/tests/: test_fetch.py
app/core/: __init__.py  config.py  db.py  filters.py
app/models/: __init__.py  api_models.py  parsers.py  sqlmodel_models.py
app/models/tests/: parsed_interest_response.py  parsed_member_response.py  test_parsers.py
app/routes/: interests_total_value.py  members.py  party.py
backend/: api_server.py  db.py  main.py
backend/client/: __init__.py  client.py  client_interface.py  client_protocol.py  clients.py  fetch.py  members.py  mock_clients.py
backend/client/mock_responses/: mock_interest_response.json  mock_member_response.json
backend/client/tests/: test_fetch.py
backend/core/: __init__.py  config.py  db.py  filters.py
backend/core/queries/: __init__.py  members.py
backend/models/: __init__.py  models.py  parser.py  parsers.py  sqlmodel_models.py  sqlmodels.py
backend/models/tests/: parsed_interest_response.py  parsed_member_response.py  test_parsers.py
backend/parliament_api_schemas/interests/: auto_generated_models.py
backend/parliament_api_schemas/members/: auto_generated_models.py
backend/routes/: interests_total_value.py  members.py
