[project]
name = "mp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "datamodel-code-generator>=0.32.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "requests>=2.32.4",
    "ruff>=0.12.7",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
